bad/mod_invalid_types_string_class.example_compiler_output
ERROR
[1mbad/mod_invalid_types_string_class.lat:6:9: [1;31merror: [0;1mmodulo is defined only for int values, not `string` and `X`[m
	"test" % x;
	       [1;32m^[m
